# FunctionTimer

./: .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements_dev.txt
ghaz_function_timer/: timer.py
