[project]
name = "ghaz_function_timer"
version = "0.0.5"
authors = [
  { name="Ghazanfar Shahbaz", email="ghazanfarshahbaz2409@gmail.com" },
]
description = "A small package made to wrap functions in a timer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "string-color==1.2.3",
]

[project.urls]
Homepage = "https://github.com/GhazanfarShahbaz/FunctionTimer"
Issues = "https://github.com/GhazanfarShahbaz/FunctionTimer/issues"
